// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly ellipse 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <ConfigProvider
      theme={
        {
          "components": {
            "Button": {
              "colorText": "#333333",
              "colorTextDisabled": "#B9B9B9",
              "controlHeight": 30,
              "fontSize": 24,
              "lineHeight": 1,
              "marginXS": 4,
            },
          },
        }
      }
    >
      <div
        className="btn-container"
        key="Convert to Path"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="convert_to_path"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Convert to Path
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Offset"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="offset"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Offset
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Array"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="array"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Array
          </span>
        </Button>
      </div>
    </ConfigProvider>
  </div>
</div>
`;

exports[`should render correctly g multiple selection 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <ConfigProvider
      theme={
        {
          "components": {
            "Button": {
              "colorText": "#333333",
              "colorTextDisabled": "#B9B9B9",
              "controlHeight": 30,
              "fontSize": 24,
              "lineHeight": 1,
              "marginXS": 4,
            },
          },
        }
      }
    >
      <div
        className="btn-container half"
        key="Offset"
      >
        <Button
          block={true}
          className="btn"
          disabled={false}
          icon={<svgr-url />}
          id="offset"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Offset
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Array"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="array"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Array
          </span>
        </Button>
      </div>
    </ConfigProvider>
  </div>
</div>
`;

exports[`should render correctly g single selection 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <ConfigProvider
      theme={
        {
          "components": {
            "Button": {
              "colorText": "#333333",
              "colorTextDisabled": "#B9B9B9",
              "controlHeight": 30,
              "fontSize": 24,
              "lineHeight": 1,
              "marginXS": 4,
            },
          },
        }
      }
    >
      <div
        className="btn-container"
        key="Array"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="array"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Array
          </span>
        </Button>
      </div>
    </ConfigProvider>
  </div>
</div>
`;

exports[`should render correctly image 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <ConfigProvider
      theme={
        {
          "components": {
            "Button": {
              "colorText": "#333333",
              "colorTextDisabled": "#B9B9B9",
              "controlHeight": 30,
              "fontSize": 24,
              "lineHeight": 1,
              "marginXS": 4,
            },
          },
        }
      }
    >
      <div
        className="btn-container"
        key="Replace With..."
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="replace_with"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Replace With...
          </span>
        </Button>
      </div>
      <div
        className="btn-container"
        key="ai_bg_removal"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="bg-removal"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            ai_bg_removal
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Trace"
      >
        <Button
          block={true}
          className="btn"
          disabled={false}
          icon={<svgr-url />}
          id="trace"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Trace
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Grading"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="grading"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Grading
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Sharpen"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="sharpen"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Sharpen
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Crop"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="crop"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Crop
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Bevel"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="bevel"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Bevel
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Invert"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="invert"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Invert
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Array"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="array"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Array
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Outline"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="potrace"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Outline
          </span>
        </Button>
      </div>
    </ConfigProvider>
  </div>
</div>
`;

exports[`should render correctly in mobile ellipse 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    id="convert_to_path"
    key="Outline"
    label="Outline"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="offset"
    key="Offset"
    label="Offset"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile g multiple selection 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    disabled={false}
    id="offset"
    key="Offset"
    label="Offset"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile g single selection 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile image 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="replace_with"
    key="Replace"
    label="Replace"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    id="potrace"
    key="Outline"
    label="Outline"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="grading"
    key="Brightness"
    label="Brightness"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="sharpen"
    key="Sharpen"
    label="Sharpen"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="crop"
    key="Crop"
    label="Crop"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    id="bevel"
    key="Bevel"
    label="Bevel"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    id="invert"
    key="Invert"
    label="Invert"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="trace"
    key="Trace"
    label="Trace"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    id="bg-removal"
    key="BG Removal"
    label="BG Removal"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile line 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    id="convert_to_path"
    key="Outline"
    label="Outline"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="offset"
    key="Offset"
    label="Offset"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile no elements 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
</div>
`;

exports[`should render correctly in mobile path 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    id="edit_path"
    key="edit_path"
    label="edit_path"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    id="decompose_path"
    key="Decompose"
    label="Decompose"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="offset"
    key="Offset"
    label="Offset"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    id="simplify"
    key="simplify"
    label="simplify"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile polygon 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    id="convert_to_path"
    key="Outline"
    label="Outline"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="offset"
    key="Offset"
    label="Offset"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile rect 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    id="convert_to_path"
    key="Outline"
    label="Outline"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="offset"
    key="Offset"
    label="Offset"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile text 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    id="convert_to_path"
    key="Outline"
    label="Outline"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    id="weld"
    key="weld_text"
    label="weld_text"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile use 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    id="disassemble_use"
    key="Disassemble"
    label="Disassemble"
    onClick={[Function]}
  />
  <ObjectPanelItem
    autoClose={false}
    content={<svgr-url />}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly line 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <ConfigProvider
      theme={
        {
          "components": {
            "Button": {
              "colorText": "#333333",
              "colorTextDisabled": "#B9B9B9",
              "controlHeight": 30,
              "fontSize": 24,
              "lineHeight": 1,
              "marginXS": 4,
            },
          },
        }
      }
    >
      <div
        className="btn-container"
        key="Convert to Path"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="convert_to_path"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Convert to Path
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Offset"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="offset"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Offset
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Array"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="array"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Array
          </span>
        </Button>
      </div>
    </ConfigProvider>
  </div>
</div>
`;

exports[`should render correctly no elements 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <ConfigProvider
      theme={
        {
          "components": {
            "Button": {
              "colorText": "#333333",
              "colorTextDisabled": "#B9B9B9",
              "controlHeight": 30,
              "fontSize": 24,
              "lineHeight": 1,
              "marginXS": 4,
            },
          },
        }
      }
    />
  </div>
</div>
`;

exports[`should render correctly path 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <ConfigProvider
      theme={
        {
          "components": {
            "Button": {
              "colorText": "#333333",
              "colorTextDisabled": "#B9B9B9",
              "controlHeight": 30,
              "fontSize": 24,
              "lineHeight": 1,
              "marginXS": 4,
            },
          },
        }
      }
    >
      <div
        className="btn-container"
        key="edit_path"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="edit_path"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            edit_path
          </span>
        </Button>
      </div>
      <div
        className="btn-container"
        key="Decompose"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="decompose_path"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Decompose
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Offset"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="offset"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Offset
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Array"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="array"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Array
          </span>
        </Button>
      </div>
      <div
        className="btn-container"
        key="simplify"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="simplify"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            simplify
          </span>
        </Button>
      </div>
    </ConfigProvider>
  </div>
</div>
`;

exports[`should render correctly polygon 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <ConfigProvider
      theme={
        {
          "components": {
            "Button": {
              "colorText": "#333333",
              "colorTextDisabled": "#B9B9B9",
              "controlHeight": 30,
              "fontSize": 24,
              "lineHeight": 1,
              "marginXS": 4,
            },
          },
        }
      }
    >
      <div
        className="btn-container"
        key="Convert to Path"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="convert_to_path"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Convert to Path
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Offset"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="offset"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Offset
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Array"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="array"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Array
          </span>
        </Button>
      </div>
    </ConfigProvider>
  </div>
</div>
`;

exports[`should render correctly rect 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <ConfigProvider
      theme={
        {
          "components": {
            "Button": {
              "colorText": "#333333",
              "colorTextDisabled": "#B9B9B9",
              "controlHeight": 30,
              "fontSize": 24,
              "lineHeight": 1,
              "marginXS": 4,
            },
          },
        }
      }
    >
      <div
        className="btn-container"
        key="Convert to Path"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="convert_to_path"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Convert to Path
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Offset"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="offset"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Offset
          </span>
        </Button>
      </div>
      <div
        className="btn-container half"
        key="Array"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="array"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Array
          </span>
        </Button>
      </div>
    </ConfigProvider>
  </div>
</div>
`;

exports[`should render correctly text 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <ConfigProvider
      theme={
        {
          "components": {
            "Button": {
              "colorText": "#333333",
              "colorTextDisabled": "#B9B9B9",
              "controlHeight": 30,
              "fontSize": 24,
              "lineHeight": 1,
              "marginXS": 4,
            },
          },
        }
      }
    >
      <div
        className="btn-container"
        key="Convert to Path"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="convert_to_path"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Convert to Path
          </span>
        </Button>
      </div>
      <div
        className="btn-container"
        key="weld_text"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="weld"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            weld_text
          </span>
        </Button>
      </div>
      <div
        className="btn-container"
        key="Array"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="array"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Array
          </span>
        </Button>
      </div>
    </ConfigProvider>
  </div>
</div>
`;

exports[`should render correctly use 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <ConfigProvider
      theme={
        {
          "components": {
            "Button": {
              "colorText": "#333333",
              "colorTextDisabled": "#B9B9B9",
              "controlHeight": 30,
              "fontSize": 24,
              "lineHeight": 1,
              "marginXS": 4,
            },
          },
        }
      }
    >
      <div
        className="btn-container"
        key="Disassemble"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="disassemble_use"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Disassemble
          </span>
        </Button>
      </div>
      <div
        className="btn-container"
        key="Array"
      >
        <Button
          block={true}
          className="btn"
          icon={<svgr-url />}
          id="array"
          onClick={[Function]}
        >
          <span
            className="label"
          >
            Array
          </span>
        </Button>
      </div>
    </ConfigProvider>
  </div>
</div>
`;
